Create ArgumentParsedResultList